--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "daisyui": "^3.7.5",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-daisyui": "^4.1.1",
     "react-dom": "^18.2.0",
